Fix spacing

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -86,14 +86,13 @@ header {
     height: 270px;
     display: flex;
     justify-content: center;
-    align-items: space-around;
     flex-direction: column;
   }
 
   .reviews__review-author {
     display: flex;
     width: 100%;
-    padding: 25px 25px 0px 25px;
+    padding: 30px 30px 0px 30px;
 
     img {
       border-radius: 100%;
@@ -112,12 +111,12 @@ header {
     font-size: rem(16);
     line-height: 25px;
     padding-left: 30px;
-    padding-right: 25px;
+    padding-right: 30px;
   }
 }
 
 article {
-  border-radius: 5px;
+  border-radius: 8px;
 }
 
 .author-name {
